--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,8 @@
 								</div>
 								<div class="duration col p-0 mb-2 px-3 px-lg-0 px-xl-0 d-block d-lg-none w-70">
 									<span class="blue-grey-text text-darken-2 font-16">
-										<span class="d-inline d-lg-none d-xl-none">04.2022&nbsp;<span class="d-inline">-&nbsp;Present</span></span>
+										<span class="d-inline d-lg-none d-xl-none">04.2022&nbsp;<span
+												class="d-inline">-&nbsp;Present</span></span>
 									</span>
 								</div>
 								<div class="clearfix w-100 d-lg-none d-xl-none"></div>
@@ -181,10 +182,8 @@
 										<li>
 											<p class="blue-grey-text text-darken-2 font-18">
 												Worked with cross-functional teams to align technical efforts with
-												business
-												needs, helping Prelaunch enhance data-driven decisions and streamline
-												product
-												validation.
+												business needs, helping Prelaunch enhance data-driven decisions and
+												streamline product validation.
 											</p>
 										</li>
 
@@ -194,11 +193,11 @@
 										<i>Technologies</i>: <b>NodeJS, Python, GraphQL, AWS(ECS, EC2, Amplify,
 											EventBridge, Step Functions, API Gateway, CloudFront, SQS, SNS, Lambda,
 											AppSync, DynamoDB, Elasticsearch, S3, CloudFormation), Google BigQuery,
-											OpenAI, Scikit-learn, Pandas, KMeans, </b>
+											OpenAI, Scikit-learn, Pandas, KMeans</b>
 										<br />
-										For more information:
+										<!-- For more information:
 										<a href="https://www.linkedin.com/company/prelaunchcom/about/"
-											class="blue-grey-text text-darken-1" target="_blank">Prelaunch.com</a>
+											class="blue-grey-text text-darken-1" target="_blank">Prelaunch.com</a> -->
 									</p>
 								</div>
 							</li>
@@ -213,7 +212,8 @@
 								</div>
 								<div class="duration col p-0 mb-2 px-3 px-lg-0 px-xl-0 d-block d-lg-none w-70">
 									<span class="blue-grey-text text-darken-2 font-16">
-										<span class="d-inline d-lg-none d-xl-none">04.2023&nbsp;<span class="d-inline">-&nbsp;12.2024</span></span>
+										<span class="d-inline d-lg-none d-xl-none">04.2023&nbsp;<span
+												class="d-inline">-&nbsp;12.2024</span></span>
 									</span>
 								</div>
 								<div class="clearfix w-100 d-lg-none d-xl-none"></div>
@@ -272,7 +272,8 @@
 								</div>
 								<div class="duration col p-0 mb-2 px-3 px-lg-0 px-xl-0 d-block d-lg-none w-70">
 									<span class="blue-grey-text text-darken-2 font-16">
-										<span class="d-inline d-lg-none d-xl-none">03.2020&nbsp;<span class="d-inline">-&nbsp;03.2022</span></span>
+										<span class="d-inline d-lg-none d-xl-none">03.2020&nbsp;<span
+												class="d-inline">-&nbsp;03.2022</span></span>
 									</span>
 								</div>
 								<div class="clearfix w-100 d-lg-none d-xl-none"></div>
@@ -315,9 +316,9 @@
 											AWS(ECS, EC2, RDS,
 											DocumentDB, S3, SQS)</b>
 										<br />
-										For more information:
+										<!-- For more information:
 										<a href="https://www.linkedin.com/company/perkfection/about/"
-											class="blue-grey-text text-darken-1" target="_blank">Perkfection</a>
+											class="blue-grey-text text-darken-1" target="_blank">Perkfection</a> -->
 									</p>
 								</div>
 							</li>
@@ -332,7 +333,8 @@
 								</div>
 								<div class="duration col p-0 mb-2 px-3 px-lg-0 px-xl-0 d-block d-lg-none w-70">
 									<span class="blue-grey-text text-darken-2 font-16">
-										<span class="d-inline d-lg-none d-xl-none">09.2019&nbsp;<span class="d-inline">-&nbsp;03.2022</span></span>
+										<span class="d-inline d-lg-none d-xl-none">09.2019&nbsp;<span
+												class="d-inline">-&nbsp;03.2022</span></span>
 									</span>
 								</div>
 								<div class="clearfix w-100 d-lg-none d-xl-none"></div>
@@ -383,10 +385,10 @@
 											AWS(Amplify, DynamoDB, AppSync, S3, Cognito, EC2, ECS, API Gateway,
 											Lambda)</b>
 										<br />
-										For more information:
+										<!-- For more information:
 										<a href="https://www.linkedin.com/company/tcf-team/about/"
 											class="blue-grey-text text-darken-1" target="_blank">The Crowdfunding
-											Formula (TCF)</a>
+											Formula (TCF)</a> -->
 									</p>
 								</div>
 							</li>
